# oxford-learners-scraper

./: .gitignore  README.md  application.py  import_command.py  pyproject.toml  requirements.txt  scraper.py
oxford_learners_scraper/: application.py  import_command.py  scraper.py  utils.py
