[tool.poetry]
name = "oxford-learners-scraper"
version = "0.2.1"
description = "Scraper for Oxford Learners Dictionary"
authors = ["Tadek Teleżyński <tadekte@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
cleo = "^0.7.6"
XlsxWriter = "^1.2.7"
beautifulsoup4 = "^4.8.2"

[tool.poetry.dev-dependencies]
ipython = "^7.12.0"
ipdb = "^0.12.3"

[tool.poetry.scripts]
ols = "oxford_learners_scraper.application:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
